Add a valid aggregator example in environment file

--- a/agents/ICMPingAgent/examples/environment.conf
+++ b/agents/ICMPingAgent/examples/environment.conf
@@ -2,7 +2,7 @@
   "cluster_id": "LSD-CLUSTER",
   "aggregate": {
                   "host": "localhost",
-                  "port": "1313"
+                  "port": 9000
                },
   "targets": [
                 {
