Added boot time agent

--- a/config/examples/environment.conf
+++ b/config/examples/environment.conf
@@ -24,6 +24,12 @@
                   "host": "youtube.com",
                   "description": "youtube server"
                 }
-             ]
-
+             ],
+  "os": {
+                  "auth_url":"",
+                  "username":"",
+                  "password":"",
+                  "project_id":"",
+                  "user_domain_name":""
+   }
 }
