Change environment example to consider k8s environment and underlying machines

--- a/config/examples/environment.conf
+++ b/config/examples/environment.conf
@@ -1,28 +1,23 @@
 {
   "barograph": {
-                "host": "localhost",
-                "port": 9001
+                "host": "10.11.4.161",
+                "port": 8080
   },
   "aggregate": {
-                  "host": "localhost",
+                  "host": "aggregate.default.svc.cluster.local",
                   "cluster_id": "LSD-CLUSTER",
                   "port": 9000
                },
   "targets": [
                 {
                   "machine_id": 716253,
-                  "host": "facebook.com",
-                  "description": "Facebook server"
+                  "host": "10.1.1.8",
+                  "description": "Target VM1"
                 },
                 {
                   "machine_id": 172535,
-                  "host": "google.com",
-                  "description": "Google server"
-                },
-                {
-                  "machine_id": 12653,
-                  "host": "youtube.com",
-                  "description": "youtube server"
+                  "host": "10.1.1.15",
+                  "description": "Target VM2"
                 }
              ]
 
