--- a/barograph/docker-compose.yaml
+++ b/barograph/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - 27017:27017
     command: mongod --smallfiles --logpath=/dev/null # --quiet
   barograph:
-    image: walteraa/barograph:latest
+    image: walteraa/barograph:v0.0.4
     container_name: "barograph"
     environment:
       - MONGODB_HOST=mongodb
